--- a/packages/klarheit-web-scraper/tsconfig.json
+++ b/packages/klarheit-web-scraper/tsconfig.json
@@ -2,10 +2,13 @@
   "compilerOptions": {
     "module": "ES6",
     "target": "ES6",
+    "moduleResolution": "Node",
     "noImplicitAny": true,
     "removeComments": true,
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src/**/*"
@@ -13,5 +16,6 @@
   "exclude": [
     "node_modules",
     "**/*.spec.ts"
-  ]
+  ],
+  "compileOnSave": true
 }
