--- a/packages/klarheit-web-scraper/package.json
+++ b/packages/klarheit-web-scraper/package.json
@@ -2,13 +2,21 @@
   "name": "klarheit-scraper-client",
   "version": "0.0.0",
   "description": "Klarheit Scraper client runs in the browser scraping the information expressed by a semantinc structure in the form of a Javascript object.",
-  "main": "klarheit-scraper.ts",
   "repository": "git@github.com:prdxs/klarheit-scraper-client.git",
   "author": "Rubén Fernández <rub.fndz@gmail.com>",
   "license": "GPL-3.0-or-later",
   "private": true,
+  "scripts": {
+    "build": "webpack",
+    "watch": "webpack -w"
+  },
   "devDependencies": {
+    "ts-loader": "^4.5.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1"
-  }
+    "typescript": "^3.0.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {}
 }
