--- a/packages/klarheit-web-scraper/tsconfig.json
+++ b/packages/klarheit-web-scraper/tsconfig.json
@@ -1,21 +1,13 @@
 {
   "compilerOptions": {
-    "module": "ES6",
-    "target": "ES6",
+    "module": "es6",
+    "target": "es2017",
     "moduleResolution": "Node",
     "noImplicitAny": true,
     "removeComments": true,
     "sourceMap": true,
-    "outDir": "dist",
+    "outDir": "./dist/",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ],
-  "compileOnSave": true
+  }
 }
