--- a/packages/klarheit-web-scraper/package.json
+++ b/packages/klarheit-web-scraper/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "klarheit-scraper-client",
+  "name": "mole-web-scraper",
   "version": "0.0.0",
-  "description": "Klarheit Scraper client runs in the browser scraping the information expressed by a semantinc structure in the form of a Javascript object.",
-  "repository": "git@github.com:prdxs/klarheit-scraper-client.git",
+  "description": "Mole web scraper runs in the browser scraping the information expressed by a semantinc structure in the form of a Javascript object.",
+  "repository": "git@github.com:prdxs/mole-web-scraper.git",
   "author": "Rubén Fernández <rub.fndz@gmail.com>",
   "license": "GPL-3.0-or-later",
-  "private": true,
   "scripts": {
     "build": "webpack",
     "watch": "webpack -w"
