chore: Created cli tool to scrap web pages using the library
Created a Node cli tool that uses Puppeteer API to run headless Chrome
browser and extract information from web pages given a url and an
extraction query.

Resolves part of: #2

--- a/packages/klarheit-web-scraper/package.json
+++ b/packages/klarheit-web-scraper/package.json
@@ -5,18 +5,22 @@
   "repository": "git@github.com:prdxs/mole-web-scraper.git",
   "author": "Rubén Fernández <rub.fndz@gmail.com>",
   "license": "GPL-3.0-or-later",
+  "bin": {
+    "outside": "bin/mole"
+  },
   "scripts": {
     "build": "rimraf dist && webpack --config webpack.prod.js",
     "watch": "rimraf dist && webpack --config webpack.dev.js -w"
   },
   "devDependencies": {
+    "minimist": "^1.2.0",
+    "puppeteer": "^1.12.2",
     "rimraf": "^2.6.3",
     "ts-loader": "^4.5.0",
     "tslint": "^5.12.1",
     "typescript": "^3.3.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {}
