--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "commitizen": "^3.1.1",
+    "cz-lerna-changelog": "^2.0.2",
     "lerna": "^3.13.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-lerna-changelog"
+    }
   }
 }
